# detfm

./: .cmake-format.py  .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  example_format.lua  meson.build  vcpkg.json
classdef/: base64.yml  imagePNG.yml
detfm/: Cargo.toml
detfm-cli/: Cargo.toml
detfm-cli/src/: main.rs
detfm-wasm/: Cargo.toml  README.md
detfm-wasm/src/: lib.rs  time.rs  utils.rs
detfm/packets/: clientbound.json  fetch_packets.py  serverbound.json  tribulle_clientbound.json
detfm/packets/sources/: athesdrake.py  friedkeenan.py
detfm/src/: detfm.rs  lib.rs  rename.rs  renamer.rs
detfm/src/detfm/: classes.rs  eval.rs  jump_info.rs  ns.rs  pktnames.rs  simplify.rs  unscramble.rs
detfm/src/fmt/: formatter.rs  mod.rs
detfm/src/fmt/formatters/: default.rs  lua.rs
docker/: Dockerfile.alpine  Dockerfile.debian
include/: detfm.hpp  fmt_swf.hpp  renamer.hpp  utils.hpp
include/detfm/: StaticClass.hpp  WrapClass.hpp  common.hpp  eval.hpp  opinfo.hpp  simplify.hpp
include/match/: Action.hpp  ClassMatcher.hpp  MatchResult.hpp  MethodMatcher.hpp  MultinameMatcher.hpp  NumberMatcher.hpp  errors.hpp
include/match/traits/: BoolTraitMatcher.hpp  MethodTraitMatcher.hpp  NumberTraitMatcher.hpp  StringTraitMatcher.hpp  TraitMatcher.hpp
packets/: clientbound.json  compile_packets.py  fetch_packets.py  serverbound.json  tribulle_clientbound.json  tribulle_serverbound.json
src/: CMakeLists.txt  detfm.cpp  detfm.rs  fmt.rs  main.cpp  main.rs  meson.build  renamer.cpp  renamer.rs  replacer.rs  utils.cpp
src/detfm/: CMakeLists.txt  StaticClass.cpp  WrapClass.cpp  classes.rs  common.cpp  eval.cpp  eval.rs  jump_info.rs  meson.build  opinfo.cpp  pktnames.rs  simplify.cpp  simplify.rs  unscramble.rs
src/fmt/: mod.rs
src/fmt/formatters/: mod.rs
src/match/: Action.cpp  CMakeLists.txt  ClassMatcher.cpp  MatchResult.cpp  MethodMatcher.cpp  MultinameMatcher.cpp  NumberMatcher.cpp  errors.cpp  meson.build
src/match/traits/: BoolTraitMatcher.cpp  CMakeLists.txt  MethodTraitMatcher.cpp  NumberTraitMatcher.cpp  StringTraitMatcher.cpp  TraitMatcher.cpp  meson.build
subprojects/: cpr.wrap  swflib.wrap  unpacker.wrap  yaml-cpp.wrap
