[package]
name = "detfm-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "detfm"
path = "src/main.rs"

[dependencies]
detfm = { workspace = true }
rabc = { workspace = true }
unpacker = { workspace = true }

anyhow = { workspace = true }
jzon = { workspace = true }
log = { workspace = true }
stderrlog = { workspace = true }

clap = { version = "4.5.32", features = ["derive"] }


[lints]
workspace = true
