[package]
name = "detfm-wasm"
version = "0.0.1"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
detfm = { workspace = true }
rabc = { workspace = true }
unpacker = { workspace = true }

anyhow = { workspace = true }

wasm-bindgen = "0.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }

[lints]
workspace = true
