[package]
name = "detfm"
version.workspace = true
edition.workspace = true

[dependencies]
rabc = { workspace = true }
unpacker = { workspace = true }

anyhow = { workspace = true }
itertools = { workspace = true }
jzon = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

mlua = { version = "0.10.3", optional = true }

[features]
lua = []
lua-vendored = ["mlua/vendored"]
lua51 = ["dep:mlua", "mlua/lua51", "lua"]
lua52 = ["dep:mlua", "mlua/lua52", "lua"]
lua53 = ["dep:mlua", "mlua/lua53", "lua"]
lua54 = ["dep:mlua", "mlua/lua54", "lua"]
luajit = ["dep:mlua", "mlua/luajit", "lua"]
luajit52 = ["dep:mlua", "mlua/luajit52", "lua"]

[lints]
workspace = true
