sources += files(
    'traits/BoolTraitMatcher.cpp',
    'traits/MethodTraitMatcher.cpp',
    'traits/NumberTraitMatcher.cpp',
    'traits/StringTraitMatcher.cpp',
    'traits/TraitMatcher.cpp',
    'Action.cpp',
    'ClassMatcher.cpp',
    'MatchResult.cpp',
    'MethodMatcher.cpp',
    'MultinameMatcher.cpp',
    'NumberMatcher.cpp',
    'errors.cpp',
)
subdir('traits')